--- a/lang/de/messages-hardcoded.json
+++ b/lang/de/messages-hardcoded.json
@@ -1,4 +1,5 @@
 {
+    "lang_clientSshConfig": "SSH-Konfiguration",
     "lang_configurationCompilation": "Konfiguration zusammenstellen",
     "lang_contentOf": "Inhalt von",
     "lang_createUser": "Benutzer anlegen",
