--- a/lang/de/config-module.json
+++ b/lang/de/config-module.json
@@ -3,8 +3,8 @@
     "adAuth_title": "Active Directory Authentifizierung",
     "branding_description": "Das Logo wird am Anmeldebildschirm und beim Starten des Systems angezeigt.",
     "branding_title": "Einrichtungsspezifisches Logo",
-    "custom_description": "Mit einem Erweiterten Modul ist es m\u00f6glich, beliebige Dateien zum Grundsystem hinzuzuf\u00fcgen Nutzen Sie dieses Modul, um z.B. spezielle Konfigurationsdateien auf den Client PCs zu verwenden, die sich nicht mit einem der anderen Wizards erstellen l\u00e4sst. Das Hinzuf\u00fcgen eines Erweiterten Moduls erfordert in der Regel zumindest grundlegende Systemkenntnisse im Linuxbereich.",
-    "custom_title": "Generisches Modul hinzuf\u00fcgen",
+    "custom_description": "Mit einem generischen Modul ist es m\u00f6glich, beliebige Dateien zum Grundsystem hinzuzuf\u00fcgen.\r\nNutzen Sie dieses Modul, um z.B. spezielle Konfigurationsdateien auf den Client PCs zu verwenden, die sich nicht mit einem der anderen Wizards erstellen l\u00e4sst. Das Hinzuf\u00fcgen eines Erweiterten Moduls erfordert in der Regel zumindest grundlegende Systemkenntnisse im Linuxbereich.",
+    "custom_title": "Generisches Modul",
     "group_authentication": "Authentifizierung",
     "group_branding": "Einrichtungsspezifisches Logo",
     "group_generic": "Generisch",
