--- a/lang/pt/messages-hardcoded.json
+++ b/lang/pt/messages-hardcoded.json
@@ -1,6 +1,6 @@
 {
     "lang_configurationCompilation": "Compilar configura\u00e7\u00e3o",
-    "lang_contentOf": "Conte\u00fado de \u0022",
+    "lang_contentOf": "Conte\u00fado de \"",
     "lang_createUser": "Criar Usu\u00e1rio",
     "lang_days": "Dia(s)",
     "lang_hours": "Hora(s)",
