--- a/lang/de/templates/minilinux/filelist.json
+++ b/lang/de/templates/minilinux/filelist.json
@@ -3,6 +3,8 @@
     "lang_canUpdate1": "Mindestens eine Komponente von",
     "lang_canUpdate2": "kann aktualisiert werden. F\u00fcr einen reibungslosen Betrieb wird empfohlen, alle Komponenten auf dem aktuellen Stand zu halten.",
     "lang_configurationPackageNotFound": "Keine Konfigurationspakete gefunden!",
+    "lang_desiredVersion": "Gew\u00fcnschte Version",
+    "lang_filesInVersion": "Dateien zu Version",
     "lang_outdated": "Veraltet",
     "lang_redownload": "Erneut herunterladen",
     "lang_systemUpdated": "Das System ist auf dem aktuellen Stand.",
