--- a/lang/en/templates/minilinux/filelist.json
+++ b/lang/en/templates/minilinux/filelist.json
@@ -3,6 +3,8 @@
     "lang_canUpdate1": "At least one component of",
     "lang_canUpdate2": "can be updated. For a smooth operation, it is recommended to keep all components up to date.",
     "lang_configurationPackageNotFound": "Configuration package not found!",
+    "lang_desiredVersion": "Desired version",
+    "lang_filesInVersion": "Files for version",
     "lang_outdated": "Outdated",
     "lang_redownload": "Download again",
     "lang_systemUpdated": "The system is up to date.",
