--- a/lang/de/templates/systemstatus/diskstat.json
+++ b/lang/de/templates/systemstatus/diskstat.json
@@ -1,5 +1,6 @@
 {
     "lang_capacity": "Kapazit\u00e4t",
+    "lang_free": "Frei",
     "lang_systemPartition": "Systempartition",
     "lang_vmStore": "VM-Speicher",
     "lang_vmStoreError": "Fehler beim Ermitteln des verf\u00fcgbaren Speicherplatzes am VM-Speicherort. Bitte \u00fcberpr\u00fcfen Sie die Konfiguration."
