--- a/lang/en/templates/systemstatus/_page.json
+++ b/lang/en/templates/systemstatus/_page.json
@@ -1,5 +1,7 @@
 {
     "lang_addressConfiguration": "Address Configuration",
+    "lang_advanced": "Advanced \/ Debug",
+    "lang_dmsdLog": "dmsd log",
     "lang_iAmSure": "Yes, I am sure",
     "lang_maintenance": "Maintenance",
     "lang_services": "Services",
