--- a/lang/de/templates/sysconfig/ad-checkconnection.json
+++ b/lang/de/templates/sysconfig/ad-checkconnection.json
@@ -1,5 +1,5 @@
 {
     "lang_back": "Zur\u00fcck",
-    "lang_connectionWait": "Die Verbindung zum angegebenen AD-Server wird nun \u00fcberpr\u00fcft. Bitte haben Sie einen Moment Geduld.",
-    "lang_skip": "\u00dcberspringen"
+    "lang_connectionWait": "Pr\u00fcfe Verbindung...",
+    "lang_next": "Weiter"
 }
