--- a/lang/de/templates/systemstatus/_page.json
+++ b/lang/de/templates/systemstatus/_page.json
@@ -1,5 +1,7 @@
 {
     "lang_addressConfiguration": "Adresskonfiguration",
+    "lang_advanced": "Erweitert \/ Debug",
+    "lang_dmsdLog": "dmsd Log",
     "lang_iAmSure": "Ja, ich bin sicher",
     "lang_maintenance": "Maintenance",
     "lang_services": "Dienste",
