--- a/lang/en/templates/sysconfig/ad-checkcredentials.json
+++ b/lang/en/templates/sysconfig/ad-checkcredentials.json
@@ -1,5 +1,6 @@
 {
     "lang_back": "Back",
     "lang_connectionWait": "The connection to the specified AD server is now checked. Please wait a moment.",
+    "lang_onProblemSearchBase": "If this step fails and you didn't supply a search base, try again with a valid one.",
     "lang_skip": "Skip"
 }
