--- a/lang/de/templates/sysconfig/ad-checkcredentials.json
+++ b/lang/de/templates/sysconfig/ad-checkcredentials.json
@@ -1,5 +1,6 @@
 {
     "lang_back": "Zur\u00fcck",
     "lang_connectionWait": "Die Verbindung zum angegebenen AD-Server wird nun \u00fcberpr\u00fcft. Bitte haben Sie einen Moment Geduld.",
+    "lang_onProblemSearchBase": "Falls dieser Schritt fehlschl\u00e4gt, und Sie keine Suchbasis angegeben haben, versuchen Sie es erneut unter expliziter Angabe einer Suchbasis.",
     "lang_skip": "\u00dcberspringen"
 }
