Add org list to dozmod module

--- a/lang/de/messages.json
+++ b/lang/de/messages.json
@@ -24,6 +24,7 @@
     "invalid-path": "Ung\u00fcltiger Pfad.",
     "invalid-template": "Ausgew\u00e4hlte Template ist nicht g\u00fcltig",
     "loginfail": "Benutzername oder Kennwort falsch",
+    "mail-config-saved": "Mail-Konfiguration gespeichert",
     "missing-file": "Es wurde keine Datei ausgew\u00e4hlt!",
     "missing-title": "Kein Titel eingegeben",
     "module-added": "Modul erfolgreich hinzugef\u00fcgt",
