--- a/lang/de/templates/main-menu.json
+++ b/lang/de/templates/main-menu.json
@@ -4,6 +4,7 @@
     "lang_clientLog": "Client Log",
     "lang_configurationBasic": "PXE\/Boot",
     "lang_configurationVariables": "KonfigurationsVariablen",
+    "lang_dozmod": "Dozentenmodul",
     "lang_eventLog": "Server Log",
     "lang_internetAccess": "Internetzugriff",
     "lang_language": "Sprachen",
