--- a/lang/en/templates/main-menu.json
+++ b/lang/en/templates/main-menu.json
@@ -4,6 +4,7 @@
     "lang_clientLog": "Client Log",
     "lang_configurationBasic": "PXE\/Boot",
     "lang_configurationVariables": "Configuration Variables",
+    "lang_dozmod": "Tutor module",
     "lang_eventLog": "Server Log",
     "lang_internetAccess": "Internet access",
     "lang_language": "Language",
