--- a/lang/de/templates/sysconfig/ldap-start.json
+++ b/lang/de/templates/sysconfig/ldap-start.json
@@ -3,7 +3,7 @@
     "lang_close": "Schlie\u00dfen",
     "lang_ldapText1": "Mit diesem Wizard k\u00f6nnen Sie Authentifizierung gegen einen LDAP-Server einrichten.",
     "lang_ldapText2": "Zu diesem Zweck wird ein LDAP-Proxy auf dem Satelliten-Server gestartet. Dies bedeutet, dass der LDAP-Server von diesem Server aus erreichbar sein muss. Die Pool-PCs hingegen m\u00fcssen nicht direkt mit dem LDAP-Server kommunizieren k\u00f6nnen.",
-    "lang_moduleTitle": "LDAP-Authentifizierung",
+    "lang_moduleTitle": "Modulname",
     "lang_next": "Weiter",
     "lang_password": "Passwort",
     "lang_searchBase": "Suchbasis (Search base)",
