--- a/lang/en/messages-hardcoded.json
+++ b/lang/en/messages-hardcoded.json
@@ -8,6 +8,7 @@
     "lang_location": "Location",
     "lang_login": "Login",
     "lang_moduleAdd": "Add Module",
+    "lang_noModuleFromThisGroup": "(No module from this group)",
     "lang_serverConfiguration": "Server-side Configuration",
     "lang_titleBackup": "Save and Restore",
     "lang_titleEventLog": "Event log",
