--- a/lang/de/templates/baseconfig/_page.json
+++ b/lang/de/templates/baseconfig/_page.json
@@ -1,5 +1,6 @@
 {
     "lang_basicConfiguration": "Basiskonfiguration",
+    "lang_clientRelatedConfig": "Die Optionen auf dieser Seite beziehen sich auf das Verhalten der bwLehrpool-Clients.",
     "lang_close": "Schlie\u00dfen",
     "lang_reset": "Zur\u00fccksetzen",
     "lang_save": "Speichern"
