--- a/lang/en/templates/baseconfig/_page.json
+++ b/lang/en/templates/baseconfig/_page.json
@@ -1,5 +1,6 @@
 {
     "lang_basicConfiguration": "Basic Configuration",
+    "lang_clientRelatedConfig": "The options on this page are related to the bwLehrpool client machines.",
     "lang_close": "Close",
     "lang_reset": "Reset",
     "lang_save": "Save"
