--- a/lang/en/templates/sysconfig/ldap-start.json
+++ b/lang/en/templates/sysconfig/ldap-start.json
@@ -8,7 +8,7 @@
     "lang_password": "Password",
     "lang_searchBase": "Search base",
     "lang_ssl": "SSL",
-    "lang_sslDescription": "Use SSL to connect to the LDAP-Server. (The connection between clients and proxy uses SSL in either case.)",
+    "lang_sslDescription": "Use SSL to connect to the LDAP-Server. (The connection between clients and proxy uses SSL in either case.) Some LDAP servers require SSL for authenticating connections.",
     "lang_userDirectory": "Home-Directory",
     "lang_userDirectoryInfo1": "UNC-path to home directory of user. '%s' can be used as a placeholder for the account name.",
     "lang_userDirectoryInfo2": "Currently, only CIFS\/SMB is supported."
