[baseconfig] Mask root password if applicable

--- a/lang/en/templates/webinterface/passwords.json
+++ b/lang/en/templates/webinterface/passwords.json
@@ -1,5 +1,5 @@
 {
-    "lang_description": "Set whether password fields should be masked or not.",
+    "lang_description": "Set whether password fields should be masked or not. The password field of the login page to the web interface is always masked.",
     "lang_hidePasswords": "Mask passwords",
     "lang_passwordFields": "Password fields",
     "lang_save": "Save",
