--- a/lang/de/templates/systemstatus/diskstat.json
+++ b/lang/de/templates/systemstatus/diskstat.json
@@ -6,6 +6,7 @@
     "lang_storeMissingExpected": "VM-Store nicht eingebunden. Erwartet:",
     "lang_storeNotConfigured": "Kein VM-Store konfiguriert!",
     "lang_systemPartition": "Systempartition",
+    "lang_systemStoreError": "Fehler beim Ermitteln des verf\u00fcgbaren Systemspeichers",
     "lang_vmStore": "VM-Speicher",
     "lang_vmStoreError": "Fehler beim Ermitteln des verf\u00fcgbaren Speicherplatzes am VM-Speicherort. Bitte \u00fcberpr\u00fcfen Sie die Konfiguration."
 }
