--- a/lang/de/templates/systemstatus/_page.json
+++ b/lang/de/templates/systemstatus/_page.json
@@ -3,6 +3,7 @@
     "lang_advanced": "Erweitert \/ Debug",
     "lang_dmsdLog": "dmsd Log",
     "lang_iAmSure": "Ja, ich bin sicher",
+    "lang_ldadpLog": "AD\/LDAP-Proxy Log",
     "lang_maintenance": "Maintenance",
     "lang_services": "Dienste",
     "lang_space": "Speicherplatz",
