--- a/lang/en/templates/sysconfig/ad-start.json
+++ b/lang/en/templates/sysconfig/ad-start.json
@@ -3,8 +3,10 @@
     "lang_adText2": "This user does not need special rights, you can follow this user to evade security and the rights to log on. The user only needs to have sufficient permissions to perform an LDAP Bind on AD, and search for users.",
     "lang_adText3": "Next the distinguished name of the user must be specified. You can determine this by dsquery command line program on a domain controller as the following call:",
     "lang_adText4": "After entering all required data in the next step, it checks whether communication is possible with the AD.",
+    "lang_asteriskMandatory": "Fields marked with (*) are mandatory",
     "lang_bindDN": "Bind DN",
     "lang_close": "Close",
+    "lang_customCertificate": "Additional (intermediate) certificates required for certificate validation",
     "lang_moduleTitle": "Title",
     "lang_next": "Next",
     "lang_password": "Password",
