--- a/lang/en/templates/sysconfig/ldap-start.json
+++ b/lang/en/templates/sysconfig/ldap-start.json
@@ -1,6 +1,7 @@
 {
     "lang_bindDN": "Bind domain",
     "lang_close": "Close",
+    "lang_customCertificate": "Additional (intermediate) certificates required for certificate validation",
     "lang_ldapText1": "Here you can create a configuration module to authenticate agains an LDAP server",
     "lang_ldapText2": "An LDAP-Proxy will be launched on this server. This means the LDAP-Server must be reachable from it. The client PCs in the labs however don't have to be able to talk to the LDAP server \u2013 they will use the proxy running on this server.",
     "lang_moduleTitle": "Module name",
