--- a/lang/en/templates/systemstatus/_page.json
+++ b/lang/en/templates/systemstatus/_page.json
@@ -3,6 +3,7 @@
     "lang_advanced": "Advanced \/ Debug",
     "lang_dmsdLog": "dmsd log",
     "lang_iAmSure": "Yes, I am sure",
+    "lang_ldadpLog": "AD\/LDAP proxy log",
     "lang_maintenance": "Maintenance",
     "lang_services": "Services",
     "lang_space": "Space",
